# Rnn_Inflation

./: pyproject.toml
tests/: test_rnn_economics.py
