[tool.poetry]
name = "RNN_economics"
version = "0.1.0"
description = ""
authors = ["Luiz Alexandre <luizalexandre21@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
requests = "^2.26.0"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
